--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "server":"json-server --watch db.json --port 8080",
-    "start": "react-scripts start",
+    "start": "yarn run server",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
