--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "styled-components": "^5.1.1"
   },
   "scripts": {
-    "server":"json-server --watch db.json --port 8080",
+    "server":"node ./server.js",
     "start": "yarn run server",
     "build": "react-scripts build",
     "test": "react-scripts test",
