--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "gabiflix",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "yarn": "1.21.1"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
