--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "gabiflix",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "yarn": "1.22.4"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -16,7 +19,7 @@
     "styled-components": "^5.1.1"
   },
   "scripts": {
-    "server": "node ./server.js",
+    "server":"node ./server.js",
     "start": "yarn run server",
     "dev": "react-scripts start",
     "build": "react-scripts build",
